[package]
name = "miden-clob"
version = "0.1.0"
edition = "2024"

[dependencies]
miden-client = { version = "0.9.0", features = ["testing", "concurrent", "tonic", "sqlite"] }
miden-lib = { version = "0.9", default-features = false }
miden-objects = { version = "0.9", default-features = false }
miden-tx = "0.9.0"
miden-crypto = { version = "0.14.0", features = ["executable"] }
miden-assembly = "0.14.0"

rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"

# Web server dependencies
axum = { version = "0.7", features = ["macros", "tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database dependencies
sqlx = { git = "https://github.com/partylikeits1983/sqlx", branch = "lib33", features = ["sqlite", "chrono", "uuid", "runtime-async-std"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for price fetching
reqwest = { version = "0.11", features = ["json"] }

# Additional utilities
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22"
dotenv = "0.15"
hex = "0.4"

[features]
client = []


[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "populate"
path = "src/populate.rs"

[[bin]]
name = "depth_chart"
path = "src/bin/depth_chart.rs"

[[bin]]
name = "matching_engine"
path = "src/bin/matching_engine.rs"
